# lia

./: .gitignore  README.md  pyproject.toml
doc/: ARCHITECTURE.md  bash.md  lia_architecture.excalidraw  markdown_structure.excalidraw
docker/: Dockerfile  docker-compose.yml  init.sh
src/: config.py  environment.py  main.py  timer.py
src/domain/knowledge/: knowledge_data_objects.py  knowledge_persistence_port.py  knowledge_provider.py  knowledge_provider_port.py  sentence_similarity_port.py
src/domain/learning/: learning_data_objects.py  learning_persistence_port.py  learning_provider.py  learning_provider_port.py
src/infra/cli/: cli_apdapter.py  cli_console.py  cli_knowledge_provider_manager.py  cli_parse.py  cli_rich_print.py
src/infra/knowledge/file/: file_markdown_parser.py  file_persistence_adapter.py  file_topic_parser.py
src/infra/knowledge/sentence_similarity/: daemon_process_handler.py  sentence_transformer_daemon_adapter.py  sockets.py  transformer_daemon.py  transformer_model.py  transformer_model_download_tracker.py
src/infra/learning/: sqlite_persistence_adapter.py
tests/expected_results/: test_knowledge_provider_expected_results.py  test_learning_provider_expected_results.py
tests/integration/: test_daemon_handler.py  test_knowledge_provider_end_to_end.py  test_unix_socket.py
tests/tests_data/: mock_model_dl  mock_review_db.sql
tests/tests_data/dataset_example/: ad.md  bash.md  curl.md  undefined.md
tests/unit/: helper.py  test_knowledge_provider.py  test_learning_provider.py  test_transformer_model_download_tracker.py
